# DepSynt

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  Taskfile.yml  build.sh  run-benchmarks.py
bins/: find_dependencies.cpp  find_unates.cpp  synthesis.cpp  synthesis_unate.cpp
docs/: DependentSynthesisAlgorithm.md  DependentVariablesSynthesis.md  index.html  style.css
docs/assets/: depsynt.csv  depsynt_bdd_measured.csv  spot-acd.csv  spot-ds.csv  spot-lar.csv  spot-sd.csv  strix.csv
libs/aiger/: aigtoaig.c  aigtoaig.h  aigtoblif.c  aigtoblif.h  bliftoaig.c  bliftoaig.h
notebooks/: HOA_from_tool.txt  HOA_ltl2dpa15.txt  HOA_ltl2dpa15_smaller.txt  HOA_small.txt  aiger_synt.ipynb  find-dependencies.ipynb  find-unates-algorithm.ipynb  find-unates-simulation.ipynb  find-unates.ipynb  find_dependencies_experiements.ipynb  model-checking.ipynb  spot-playground.ipynb  synthesis-result.ipynb  synthesis-unates.ipynb  synthesis.ipynb  synthesis_experiements.ipynb
scripts/: depsynt_slurm_template.sh  find_deps_analyzer.py  find_deps_slurm_template.sh  find_deps_summarizer.py  generate_cactus.py  generate_cactus_find_deps.py  remove_skipped_synt.sh  results_summarizer.py  slurm_task_gen.py  strix_slurm_template.sh  synthesis_slurm_template.sh  tlsf_to_text.py  visualization.ipynb
scripts/benchmarks-ltl/: 01.txt  02.txt  03.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  ActionConverter.txt  AlarmMin_efe2feaf.txt  Alarm_06e9cad4.txt  Alarm_2d1010f8.txt  Alarm_68c86764.txt  Alarm_70523fbe.txt  Alarm_88c5c1c3.txt  Alarm_9cac58d3.txt  Alarm_a5f99bc6.txt  Alarm_f2774e0b.txt  AllHeating_d6376bf9.txt  AllLights_06e9cad4.txt  AllLights_2c5b09da.txt  AllLights_63831f8c.txt  AllLights_aeb1d897.txt  AllLights_b209ff21.txt  AllLights_d6c5ac79.txt  AllShades_66f450a4.txt  Assumptions_a50cadd7.txt  Automata.txt  Automata16S.txt  Automata32S.txt  Button.txt  CheckAlarmBroken1_1a2942e3.txt  CheckAlarm_6bea956e.txt  CheckAlarm_88f351a6.txt  CheckCoffeMachineBroken1_a5f99bc6.txt  CheckCoffeMachine_1cf58fc1.txt  (+1101 more)
src/: CMakeLists.txt  DOCS.md  README.md  dependents_aiger_synthesiser.cpp  dependents_aiger_synthesiser.h  dependents_spot_synthesiser.h  dependents_synthesiser.cpp  dependents_synthesiser.h  find_deps_by_automaton.cpp  synt_independents.cpp  synthesis.cpp  synthesis_utils.cpp  synthesis_utils.h  utils.cpp  utils.h
src/findDeps/: find_deps_by_automaton.cpp  find_deps_by_automaton.h  find_deps_by_formula.cpp  find_deps_by_formula.h
src/models/: BLIF.cpp  BLIF.h
src/synthesis/: dependents_synthesiser.cpp  dependents_synthesiser.h  merge_aigers.h  merge_strategies.cpp  merge_strategies.h  merge_strategies_.c  merge_strategies_.cpp  merge_strategies_.h  synthesis_utils.cpp  synthesis_utils.h
src/unates/: find_unates.cpp  find_unates.h  handle_unates.cpp  unate_utils.h  (+9 more)
tools/: apply_synt.py  generate_benchmarks.py  submit-synt-tool
(+13270 files in other folders)
